# br-mt-ecommerce

./: .commitlintrc.json  .dockerignore  .env.deploy.example  .env.staging.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Caddyfile.staging  Dockerfile.scraper-worker  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.staging.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.txt
mt-pricing-backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  Dockerfile.worker-ocr  README.md  alembic.ini  pyproject.toml
mt-pricing-backend/_bmad-output/planning-artifacts/: mt-api-contract-openapi.json
mt-pricing-backend/alembic/: env.py
mt-pricing-backend/alembic/versions/: 20260506_001_initial_schema.py  20260506_002_seed_worker_heartbeat_jobs.py  20260506_003_products_search_index.py  20260507_004_currencies_suppliers_schemes.py  20260507_005_products_soft_delete_trigger.py  20260507_006_fix_audit_partitions_job.py  20260507_007_product_images_image_status.py  20260507_008_products_fts_gin.py  20260507_009_import_runs.py  20260507_010_pricing_models.py  20260507_011_suppliers_permissions.py  20260507_012_jobs_admin_perms.py  20260507_013_force_logout_events.py  20260507_014_audit_perms.py  20260507_015_channel_listings.py  20260507_016_match_candidates.py  20260507_017_fx_engine.py  20260507_018_costs_engine.py  20260507_019_importer_costs.py  20260507_020_translation_workflow.py  20260507_021_pricing_engine_v51.py  20260507_022_rls_finas.py  20260507_023_datasheets_importer.py  20260507_024_matching_v2.py  20260507_025_graphrag_scaffold.py  20260507_026_rbac_dedicated.py  20260507_027_feature_flags.py  20260507_028_calibrator_training.py  20260507_029_escalation_notifications.py  20260508_030_assets_unification.py  20260508_033_vocabularios.py  20260508_035_compatibility.py  20260508_036_merge_waves.py  20260508_037_product_scalars.py  20260508_038_components.py  20260508_039_tech_tables.py  20260508_040_seo_editorial.py  20260508_041_facet_indexes.py  20260508_042_brands_families_subfamilies_types.py  20260509_044_divisions.py  (+158 more)
mt-pricing-backend/app/: __init__.py  main.py
mt-pricing-backend/app/api/: __init__.py  deps.py  health.py  pagination.py
mt-pricing-backend/app/core/: __init__.py  celery_beat_schedule.py  config.py  db.py  jwks.py  log_handlers.py  logging.py  metrics.py  middleware.py  observability.py  rate_limit.py  redis.py  sentry.py  supabase.py
mt-pricing-backend/app/db/: __init__.py  base.py  engine.py  enums.py  mixins.py  session.py  types.py
mt-pricing-backend/app/repositories/: __init__.py  audit.py  base.py  cdc_events.py  channel_listings.py  comparator_config.py  compatibility.py  competitor_brands.py  components.py  datasheet_imports.py  feature_flags.py  golden_labels.py  goods_receipt.py  inventory.py  job.py  match_agent.py  match_rule_stat.py  matches.py  material_compatibilities.py  norm_equivalence.py  notifications.py  pricing.py  procurement.py  product.py  purchase_order.py  rule_suggestion.py  scraper_sources.py  supplier.py  taxonomy.py  taxonomy_profile.py  unit_transform.py  unmatched_offers.py  user.py  vocabularies.py
mt-pricing-backend/app/scheduler/: __init__.py  database_scheduler.py
mt-pricing-backend/app/schemas/: __init__.py  asset_links.py  assets.py  attributes.py  audit.py  audit_query.py  billing.py  brand_extractor.py  calibrator.py  cdc_event.py  channel_mirror.py  channel_pricing.py  channels.py  common.py  compatibility.py  competitor_brands.py  components.py  costs.py  currencies.py  dashboard.py  dimensions.py  documents.py  facets.py  feature_flags.py  ficha_enrich.py  finance.py  fx_rates.py  goods_receipts.py  graphrag.py  human_queue.py  importer.py  imports_costs.py  imports_datasheets.py  imports_materials.py  inventory.py  inventory_ops.py  invoice_imports.py  jobs.py  marketplace_listing.py  match_agent.py  (+24 more)
mt-pricing-backend/app/scripts/: export_openapi.py  seed_amazon_uae_from_html.py  seed_channel_pricing.py  test_datasheets_real.py
mt-pricing-backend/app/services/: __init__.py  atp.py  billing.py  image_pipeline.py  procurement_match.py  ssrf.py  storage.py
mt-pricing-backend/app/workers/: __init__.py  audit_partitions.py  daily_digest.py  escalation.py  export_jobs.py  heartbeat.py  parallel_run.py  probe_mirror.py  ssrf.py  thumbnails.py  worker.py
mt-pricing-backend/config/: scorer_weights_by_family.yaml
mt-pricing-backend/requirements/: scraper.txt
mt-pricing-backend/scripts/: backfill_divisions_from_import_runs.py  clean_test_data.sql  reset_pim_state.py  seed_demo_50_products.py  seed_e2e_users.py  seed_inventory_positions.py  seed_manufacturers_whitelist.py
mt-pricing-backend/scripts/data/: __init__.py  export_price_calibration_template.py  import_price_calibration.py  pim_quality_report.py  seed_audit_jobs.py
mt-pricing-backend/scripts/poc/: brand_extractor_poc.py  export_dataset.py  g4_report.py  metrics_collector.py  promote_model.py  run_poc.py  shopify_stub.py  spike_cross_encoder.py
mt-pricing-backend/tests/: conftest.py
mt-pricing-backend/tests/api/: test_auto_snapshot_wiring.py  test_billing_auth.py  test_cat_acceptance.py  test_channel_pricing.py  test_channel_pricing_provenance.py  test_competitor_brands_crud.py  test_costs_backwards_compat.py  test_costs_validity_api.py  test_ficha_enrich_atomicity.py  test_health_supabase.py  test_imports_pim.py  test_imports_upload_xml.py  test_invoice_imports.py  test_optimization_runs_api.py  test_pagination.py  test_products_cursor.py  test_products_filters.py  test_products_offset.py  test_products_put_patch.py  test_provenance_query_api.py  test_scraper_agent_api.py  test_scraper_sources_api.py  test_suppliers_crud.py
mt-pricing-backend/tests/auth/: test_jwt.py
mt-pricing-backend/tests/data/: test_costs_fx_trigger.py  test_costs_validity.py  test_fx_rates_trigger.py  test_importer_costs_valid_from.py  test_rls_finas.py
(+1742 files in other folders)
